# Moyan

./: .gitignore  LICENSE  README.md  build.bat  build.sh  dev.bat  dev.ps1  dev.sh  generate_icons.py  novel-agent-initial-plan.md  requirements.txt
agent-core/: config.py  debug_page.py  debug_store.py  main.py  moyan-backend.spec  runtime_hook_onnx.py
agent-core/agents/: __init__.py  base.py  beat_maker.py  foreshadowing_clerk.py  guardian.py  lore_keeper.py  scribe.py
agent-core/core/: filesystem.py  parser.py  retriever.py  state.py
agent-core/llm/: adapter.py  claude_client.py  gemini_client.py  ollama_client.py  openai_client.py
agent-core/memory/: character_state.py  continuity_log.py  db.py  foreshadowing.py
agent-core/prompts/: beat_maker.txt  foreshadowing_clerk.txt  guardian.txt  lore_keeper.txt  scribe.txt
agent-core/rag/: __init__.py  chunker.py  embedder.py  index.py
agent-core/routes/: __init__.py  chat.py  llm.py  (+2 more)
docs/: build-guide.md  dev-log.md  dev-plan-1.md  dev-plan-2.md  dev-plan.md  release-notes-v0.1.0.md  release-test-checklist.md  user-guide.md
scripts/: build-backend.bat  build-backend.sh  build-frontend.bat  build-frontend.sh  collect-artifacts.bat  collect-artifacts.sh  copy-sidecar.bat  copy-sidecar.sh
tauri-app/: index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/src/: app_dir.rs  config.rs  filesystem.rs  lib.rs  main.rs  project_state_cmds.rs  python_bridge.rs  session_cmds.rs  settings_cmds.rs  updater.rs  workspace_cmds.rs
(+42 files in other folders)
