[package]
name = "novel-agent"
version = "0.1.0"
description = "墨言 - AI 小说协作桌面应用"
authors = ["you"]
edition = "2021"
license = "AGPL-3.0-only WITH Non-Commercial Restriction"

[lib]
name = "novel_agent_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
base64 = "0.22"
